// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration::enter email (create account) should redirect to /security-code-invalid-request when request OTP more than 5 times 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email (create account) should return enter email page 1`] = `
Object {
  "contentId": "390f46f9-1f6b-44f2-8fd7-21a5385a7d3a",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email (create account) should return error when csrf not present 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email (create account) should return internal server error when /user-exists API call response is 500 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email (create account) should return validation error when email not entered 1`] = `
Object {
  "contentId": "390f46f9-1f6b-44f2-8fd7-21a5385a7d3a",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email (create account) should return validation error when invalid email entered 1`] = `
Object {
  "contentId": "390f46f9-1f6b-44f2-8fd7-21a5385a7d3a",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email (create account) should return validation error when invalid email entered 2`] = `
Object {
  "contentId": "390f46f9-1f6b-44f2-8fd7-21a5385a7d3a",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email (create account) should return validation error when invalid email entered 3`] = `
Object {
  "contentId": "390f46f9-1f6b-44f2-8fd7-21a5385a7d3a",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
